force-app/main/default/objects/CventEvents__RecordMatchingCriteria__c/fields/CventEvents__ConditionLogic__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__ConditionLogic__c</fullName>
    <description>Stores logical expression for custom condition requirements.</description>
    <inlineHelpText>Stores logical expression for custom condition requirements.</inlineHelpText>
    <label>Condition Logic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>