force-app/main/default/objects/CventEvents__RecordMatchingCriteria__c/fields/CventEvents__ConditionRequirements__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__ConditionRequirements__c</fullName>
    <description>Indicates what logic should be applied to the conditions.</description>
    <inlineHelpText>Indicates what logic should be applied to the conditions.</inlineHelpText>
    <label>Condition Requirements</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>