force-app/main/default/objects/CventEvents__RecordMatchingCriteria__c/fields/CventEvents__CventField__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__CventField__c</fullName>
    <description>Attendee Temp field API name used for matching.</description>
    <inlineHelpText>Attendee Temp field API name used for matching.</inlineHelpText>
    <label>Cvent Field</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>