force-app/main/default/objects/CventEvents__RecordMatchingCriteria__c/fields/CventEvents__SalesforceField__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__SalesforceField__c</fullName>
    <description>Account/Contact/Lead field API name used for matching.</description>
    <inlineHelpText>Account/Contact/Lead field API name used for matching.</inlineHelpText>
    <label>Salesforce Field</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>